# qwy3

./: .gitignore  CODE_OF_CONDUCT  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  controls.qwy3_controls  deny.toml  rustfmt.toml
.github/: FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md  feedback-or-feature-request.md
shaders/: block.wgsl  simple_line.wgsl  test_01.wgsl
src/: atlas.rs  block_types.rs  camera.rs  chunk_blocks.rs  chunk_loading.rs  chunk_meshing.rs  chunks.rs  cmdline.rs  commands.rs  coords.rs  default_controls.qwy3_controls  entities.rs  entities_parts.rs  entity_parts.rs  font.rs  game_init.rs  game_loop.rs  interface.rs  lang.rs  lib.rs  line_meshes.rs  main.rs  noise.rs  physics.rs  rendering.rs  rendering_init.rs  saves.rs  simple_meshes.rs  skybox.rs  table_allocator.rs  tasks.rs  texture_gen.rs  threadpool.rs  unsorted.rs  widgets.rs  world_gen.rs
src/shaders/: block.rs  block.wgsl  block_shadow.rs  block_shadow.wgsl  mod.rs  part_colored.rs  part_colored.wgsl  part_colored_shadow.rs  part_colored_shadow.wgsl  part_textured.rs  part_textured.wgsl  part_textured_shadow.rs  part_textured_shadow.wgsl  simple_line.rs  simple_line_2d.rs  simple_line_2d.wgsl  simple_texture_2d.rs  simple_texture_2d.wgsl  skybox.rs  skybox.wgsl
src/world_gen/: mod.rs  structure_engine.rs
