[package]
name = "qwy3"
description = "Wanna-be Minecraft-like"
authors = ["Anima <anim.libera@gmail.com>"]
repository = "https://github.com/anima-libera/qwy3"
license = "Apache-2.0"
categories = ["games", "voxel"]
edition = "2021"

# Not ready for publishing yet.
version = "0.1.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
# This makes debug builds a bit more usable but we really should stick to release builds.

[profile.release-debug]
inherits = "release"
debug = true
# Release build but with debug symbols for profiling.
# perf script -F +pid > jaaj.perf

[profile.super-release]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"
# Maybe faster? Probably a tiny bit faster!

[dependencies]
bitvec = "1.0.1"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
cgmath = "0.18.0"
clap = { version = "4.4.11", features = ["derive", "color"] }
enum-iterator = "1.4.1"
env_logger = "0.10.0"
futures = "0.3.28"
image = "0.24.7"
log = "0.4.17"
rand = "0.8.5"
rustc-hash = "1.1.0"
smallvec = "1.11.2"
wgpu = "0.16.0"
winit = "0.28.5"
