[package]
name = "qwy3"
description = "Wanna-be Minecraft-like"
authors = ["Anima <anim.libera@gmail.com>"]
repository = "https://github.com/anima-libera/qwy3"
license = "Apache-2.0"
categories = ["games", "voxel"]
edition = "2021"

# Not ready for publishing yet.
version = "0.1.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
# This makes debug builds a bit more usable but we really should stick to release builds.

[profile.release-debug]
inherits = "release"
debug = true
# Release build but with debug symbols for profiling.
# perf script -F +pid > jaaj.perf

[profile.super-release]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"
# Maybe faster? Probably a tiny bit faster!

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
bytemuck = { version = "1.14.1", features = [ "derive" ] }
cgmath = { version = "0.18.0", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive", "color"] }
enum-iterator = "1.5.0"
env_logger = "0.11.0"
flate2 = { version = "1.0.28", features = ["rust_backend"] }
futures = "0.3.30"
fxhash = "0.2.1"
image = "0.24.8"
log = "0.4.20"
rand = { version = "0.8.5", features = ["small_rng"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }
smallvec = "1.13.1"
wgpu = "0.19.1"
winit = "0.29.10"
