[package]
name = "qwy3"
description = "Wanna-be Minecraft-like"
authors = ["Anima <anim.libera@gmail.com>"]
repository = "https://github.com/anima-libera/qwy3"
categories = ["games", "voxel"]
edition = "2021"
version = "0.1.0"

# This is a commercial project intended to be a paid product (because of capitalism >_<, I want money).
license-file = "LICENSE" # Copyright Jeanne Demoussel 2024, All rights reserved.
# Not intended to be distributed for free.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
# This makes debug builds a bit more usable but we really should stick to release builds.

[profile.release-debug]
inherits = "release"
debug = true
# Release build but with debug symbols for profiling.
# perf script -F +pid > jaaj.perf

[profile.super-release]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"
# Maybe faster? Probably a tiny bit faster!

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
bytemuck = { version = "1.15.0", features = [ "derive" ] }
cgmath = { version = "0.18.0", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "color"] }
enum-iterator = "2.0.1"
env_logger = "0.11.3"
flate2 = { version = "1.0.30", features = ["rust_backend"] }
futures = "0.3.30"
fxhash = "0.2.1"
image = "0.25.1"
log = "0.4.21"
rand = { version = "0.8.5", features = ["small_rng"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.199", features = ["derive"] }
smallvec = "1.13.2"
wgpu = "0.20.0"
winit = "0.30.0"
